css/main.css
/* ... */
.default-header {
  padding: 5px 0;
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  z-index: 9999; }

.menu-bar {
  cursor: pointer; }
  .menu-bar span {
    color: #000;
    font-size: 24px; }
  @media (min-width: 576px) {
    .menu-bar {
      display: none; } }

.main-menubar {
  position: relative; }

@media (max-width: 767px) {
  nav {
    margin-right: 0;
    position: absolute;
    right: 0;
    top: 47px;
    text-align: right;
    padding: 20px 0;
    z-index: 5;
    background: #fff;
    -webkit-transition: all 0.3s ease 0s;
    -moz-transition: all 0.3s ease 0s;
    -o-transition: all 0.3s ease 0s;
    transition: all 0.3s ease 0s;
    -webkit-transform-origin: 100% 0%;
    -ms-transform-origin: 100% 0%;
    transform-origin: 100% 0%; }
    nav a {
      color: #8b0e05 !important; }
      nav a:hover {
        color: #8b0e05; }
    nav.hide {
      -webkit-transform: scale(0);
      -ms-transform: scale(0);
      transform: scale(0); } }

nav a {
  color: #000;
  font-size: 12px;
  font-weight: 500;
  text-transform: uppercase;
  margin: 0 20px;
  display: inline-block; }
  @media (max-width: 767px) {
    nav a {
      margin: 5px 25px; } }
  nav a:hover {
    color: #8b0e05; }

.section-gap {
  padding: 120px 0; }
  @media (max-width: 767px) {
    .section-gap {
      padding: 80px 0; } }

.section-title {
  padding-bottom: 30px; }
  .section-title h2 {
    margin-bottom: 20px; }
  .section-title p {
    font-size: 16px;
    margin-bottom: 0; }
    @media (max-width: 991px) {
      .section-title p br {
        display: none; } }

.after-donate {
  display: none;
  opacity: 0; }

.lnr {
  font-weight: 700; }

@media (max-width: 576px) {
  .not-mobile {
    display: none !important; } }

@media (min-width: 577px) {
  .only-mobile {
    display: none !important; } }

.scale-in {
  -webkit-transform: scale(0.75);
  -ms-transform: scale(0.75);
  transform: scale(0.75);
  -webkit-transform-origin: 50% 50%;
  -ms-transform-origin: 50% 50%;
  transform-origin: 50% 50%;
  -webkit-transition: -webkit-transform 0.5s ease-in-out;
  transition: -webkit-transform 0.5s ease-in-out;
  -o-transition: transform 0.5s ease-in-out;
  transition: transform 0.5s ease-in-out;
  transition: transform 0.5s ease-in-out, -webkit-transform 0.5s ease-in-out; }

.p1-gradient-bg, .primary-btn, .primary-btn:after, .banner-content .clock_sec, .head-btn:hover, .callto-wrap, .single-project .content .content-overlay, .single-vol .content .content-overlay {
  background-image: -moz-linear-gradient(0deg, #f40f68 0%, #f86e3d 55%, #fbcd11 100%);
  background-image: -webkit-linear-gradient(0deg, #f40f68 0%, #f86e3d 55%, #fbcd11 100%);
  background-image: -ms-linear-gradient(0deg, #f40f68 0%, #f86e3d 55%, #fbcd11 100%); }

.p2-gradient-bg {
  background-image: -moz-linear-gradient(0deg, #f40f68 0%, #f86e3d 55%, #fbcd11 100%);
  background-image: -webkit-linear-gradient(0deg, #f40f68 0%, #f86e3d 55%, #fbcd11 100%);
  background-image: -ms-linear-gradient(0deg, #f40f68 0%, #f86e3d 55%, #fbcd11 100%);
  opacity: .5; }

.p1-gradient-color {
  background: -webkit-linear-gradient(bottom, #f40f68 0%, #f86e3d 55%, #fbcd11 100%);
  background: -o-linear-gradient(bottom, #f40f68 0%, #f86e3d 55%, #fbcd11 100%);
  background: -webkit-gradient(linear, left bottom, left top, from(#f40f68), color-stop(55%, #f86e3d), to(#fbcd11));
  background: linear-gradient(to top, #f40f68 0%, #f86e3d 55%, #fbcd11 100%);
  -webkit-background-clip: text;
  -webkit-text-fill-color: transparent; }

.primary-btn {
  line-height: 42px;
  padding-left: 30px;
  padding-right: 60px;
  border-radius: 25px;
  border: none;
  color: #fff;
  display: inline-block;
  font-weight: 500;
  position: relative;
  -webkit-transition: all 0.3s ease 0s;
  -moz-transition: all 0.3s ease 0s;
  -o-transition: all 0.3s ease 0s;
  transition: all 0.3s ease 0s;
  cursor: pointer; }
  .primary-btn:focus {
    outline: none; }
  .primary-btn span {
    color: #fff;
    position: absolute;
    top: 50%;
    -webkit-transform: translateY(-60%);
    -ms-transform: translateY(-60%);
    transform: translateY(-60%);
    right: 30px;
    -webkit-transition: all 0.3s ease 0s;
    -moz-transition: all 0.3s ease 0s;
    -o-transition: all 0.3s ease 0s;
    transition: all 0.3s ease 0s; }
  .primary-btn:after {
    position: absolute;
    content: "";
    width: 100%;
    height: 100%;
    top: 0;
    left: 0;
    border-radius: 20px;
    opacity: 0;
    -webkit-transition: all 0.3s ease 0s;
    -moz-transition: all 0.3s ease 0s;
    -o-transition: all 0.3s ease 0s;
    transition: all 0.3s ease 0s;
    z-index: 1; }
  .primary-btn:hover {
    color: #fff; }
    .primary-btn:hover span {
      color: #fff;
      right: 20px; }

.no-icon {
  padding-right: 30px; }

.overlay {
  position: absolute;
  left: 0;
  right: 0;
  top: 0;
  bottom: 0; }

#aboutModal .modal-body {
  font-size: 115%; }
  #aboutModal .modal-body img {
    max-width: 100% !important; }
    @media (min-width: 768px) {
      #aboutModal .modal-body img {
        max-width: 20% !important; } }

#shareModal {
  /* Non solid icons get a stroke */
  /* Solid icons get a fill */ }
  #shareModal .modal-body {
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-orient: vertical;
    -webkit-box-direction: normal;
    -ms-flex-direction: column;
    flex-direction: column;
    -webkit-box-pack: center;
    -ms-flex-pack: center;
    justify-content: center;
    padding: 3% 18%; }
    @media (max-width: 767px) {
      #shareModal .modal-body {
        padding: 1% 2%; } }
/* ... */

